# vex-rs

./: .gitignore  Cargo.toml  armv7a-vex-eabi.json  build.rs
.cargo/: config
examples/first_robot/: Cargo.toml  Makefile  build.rs
examples/first_robot/.cargo/: config  config.toml
examples/first_robot/src/: lib.rs  main.rs
examples/with_vex_math/: Cargo.toml  rust-toolchain
examples/with_vex_math/src/: main.rs
explorations/linking/: RustRelease.elf  build.sh  slot_1.ini
explorations/static_library/: Cargo.toml  armv7a-vex-eabi.json  build.rs  rust-toolchain
explorations/static_library/.cargo/: config
explorations/static_library/sdk/V5_20220726_10_00_00/: manifest.json
explorations/static_library/sdk/V5_20220726_10_00_00/vexv5/: lscript.ld
explorations/static_library/sdk/V5_20220726_10_00_00/vexv5/include/: .v5_apiprivate.h.kate-swp  .v5_color.h.kate-swp  vex_motor.h  vex_smartdrive.h  vex_triport.h  vex_units.h
explorations/static_library/src/: lib.rs
explorations/static_library/src/vex_headers/: v5_api.h  v5_apitypes.h  v5_apiuser.h  v5_cpp.h  vex_brain.h  vex_color.h  vex_global.h  wrapper.hpp
src/: alloc.rs  api.rs  competition.rs  controller.rs  entry.h  lib.rs  motor.rs  screen.rs  time.rs  types.rs  util.rs  wrapper.hpp
