[package]
name = "vex-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newlib-alloc = "0.1.0"

[build-dependencies]
curl = "0.4.44"
bindgen = "0.69.1"
zip = "0.6.6"

[profile.dev]
panic = "abort"
lto = true
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
